--- a/Class/ExpressJs/Views/index.ejs
+++ b/Class/ExpressJs/Views/index.ejs
@@ -7,9 +7,9 @@
 <!-- <!-- NodeJS -> EJS (we are using), Pug, Mustache, Handlebars, etc. -->
 <!-- <!-- EJS Syntax -> The syntax consists of Taglets which resemble the HTML Tags -->
 <!-- <!-- Taglet -> It is a special syntax which is used to create Dynamic HTML Files -->
-<!-- <!-- <!-- <%= %> -> Output Taglet -->
-<!-- <!-- <!-- <%- %> -> Non-Escaping Taglet -->
-<!-- <!-- <!-- <% %> -> Conditional / Loop Taglet -->
+<!-- <!-- <!-- <%= %> -> Output Taglet; It is used to print the value of a variable in the HTML file -->
+<!-- <!-- <!-- <%- %> -> Non-Escaping Taglet; It is used to print the value of a variable in the HTML file without escaping the HTML tags -->
+<!-- <!-- <!-- <% %> -> Conditional / Loop Taglet; It is used to write the JavaScript code in the HTML file -->
 
 <!DOCTYPE html>
 <html lang="en">
